Ingredientes podem ser acrescentados em mais de uma pizza, realização de testes e correções
